packages/bahmni-design-system/src/templates/baseLayout/styles/index.module.scss
@use "@carbon/react/scss/spacing" as *;
@use "@carbon/react/scss/breakpoint" as *;
@use "@carbon/react/scss/colors" as *;
@use "@carbon/react/scss/layer" as *;
@use "@carbon/react/scss/theme" as *;

.layout {
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow-y: visible;
}

.main {
  margin-top: 1rem;
  overflow-y: visible;
  width: 100%;
  height: 100%;
}

@include breakpoint-down(lg) {
  .main {
    left: 3rem;
    width: calc(100vw - 3rem);
    left: 3rem;
    top: 13rem;
  }
}

